--- a/action.yml
+++ b/action.yml
@@ -98,7 +98,9 @@ runs:
         OXYGEN_WORKER_DIR: ${{ inputs.oxygen_worker_dir }}
         NODE_ENV: production
       run: |
-        [[ -n "${{ inputs.path }}" ]] && cd "${{ inputs.path }}"
+        if [ -n "${{ inputs.path }}" ]; then
+          cd "${{ inputs.path }}"
+        fi
 
         # We need to run multiple processes at once and are going to handle
         # exiting manually
@@ -109,63 +111,50 @@ runs:
         if [ "${{ env.IS_V2 }}" == "true" ]; then
           mkdir oxygen_v2
           rsync -a ./ ./oxygen_v2/ --exclude 'oxygen_v2' --exclude 'node_modules'
-          {
-            echo "Deploying to Oxygen..."
-            build_command_filtered=$(echo '${{ inputs.build_command }}' | sed 's/HYDROGEN_ASSET_BASE_URL=$OXYGEN_ASSET_BASE_URL //g')
-            oxygen_v2_command="npx @shopify/oxygen-cli@latest oxygen:deploy \
-                  --path=${{ inputs.path }} \
-                  --assetsFolder=${{ inputs.oxygen_client_dir }} \
-                  --workerFolder=${{ inputs.oxygen_worker_dir }} \
-                  --verificationMaxDuration=${{ inputs.oxygen_deployment_verification_max_duration }} \
-                  --token=${{ steps.check_version.outputs.v2_token }}"
-            if [ "${{ inputs.oxygen_deployment_verification }}" == "false" ]; then
-              oxygen_v2_command+=" --skipVerification"
-            fi
+          echo "Deploying to Oxygen..."
+          build_command_filtered=$(echo '${{ inputs.build_command }}' | sed 's/HYDROGEN_ASSET_BASE_URL=$OXYGEN_ASSET_BASE_URL //g')
+          oxygen_v2_command="npx @shopify/oxygen-cli@latest oxygen:deploy \
+            --path=${{ inputs.path }} \
+            --assetsFolder=${{ inputs.oxygen_client_dir }} \
+            --workerFolder=${{ inputs.oxygen_worker_dir }} \
+            --verificationMaxDuration=${{ inputs.oxygen_deployment_verification_max_duration }} \
+            --token=${{ steps.check_version.outputs.v2_token }}"
+          if [ "${{ inputs.oxygen_deployment_verification }}" == "false" ]; then
+            oxygen_v2_command+=" --skipVerification"
+          }
 
-            if [[ "${{ env.PRIORITY }}" == "v2" ]]; then
-              output=$(cd oxygen_v2 && ln -s ../node_modules node_modules && $oxygen_v2_command --buildCommand="${build_command_filtered}")
-              exit_code=$?
-
-              if [ $exit_code -eq 0 ]; then
-                echo "url=$output" >> $GITHUB_OUTPUT
-              else
-                exit $exit_code
-              fi
-            else
-              $(cd oxygen_v2 && ln -s ../node_modules node_modules && $oxygen_v2_command --buildCommand="${build_command_filtered}" &> /dev/null)
-            fi
-          } &
-          pids+=($!)
           if [[ "${{ env.PRIORITY }}" == "v2" ]]; then
-            priority_pid=$!
+            output=$(cd oxygen_v2 && ln -s ../node_modules node_modules && $oxygen_v2_command --buildCommand="${build_command_filtered}")
+            exit_code=$
+
+            if [ $exit_code -eq 0 ]; then
+              echo "url=$output" >> $GITHUB_OUTPUT
+            else
+              exit $exit_code
+            fi
+          else
+            output=$(cd oxygen_v2 && ln -s ../node_modules node_modules && $oxygen_v2_command --buildCommand="${build_command_filtered}")
           fi
         fi
 
         if [ "${{ env.IS_V1 }}" == "true" ]; then
-          {
-            echo "Deploying to Oxygen..."
-            [[ -z "${{ inputs.commit_timestamp }}" ]] && export OXYGEN_COMMIT_TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ") || export OXYGEN_COMMIT_TIMESTAMP=${{ inputs.commit_timestamp }}
-            oxygen_v1_command="$GITHUB_ACTION_PATH/oxygenctl deploy --deployment-verification=${{ inputs.oxygen_deployment_verification }}"
+          echo "Deploying to Oxygen..."
+          [[ -z "${{ inputs.commit_timestamp }}" ]] && export OXYGEN_COMMIT_TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ") || export OXYGEN_COMMIT_TIMESTAMP=${{ inputs.commit_timestamp }}
+          oxygen_v1_command="$GITHUB_ACTION_PATH/oxygenctl deploy --deployment-verification=${{ inputs.oxygen_deployment_verification }}"
 
-            if [[ "${{ env.PRIORITY }}" == "v1" ]]; then
-              output=$(OXYGEN_DEPLOYMENT_TOKEN=${{ steps.check_version.outputs.v1_token }} $oxygen_v1_command)
-              exit_code=$?
-
-              if [ $exit_code -eq 0 ]; then
-                echo "url=$output" >> $GITHUB_OUTPUT
-              else
-                exit $exit_code
-              fi
-            else
-              $(OXYGEN_DEPLOYMENT_TOKEN=${{ steps.check_version.outputs.v1_token }} $oxygen_v1_command &> /dev/null)
-            fi
-          } &
-          pids+=($!)
           if [[ "${{ env.PRIORITY }}" == "v1" ]]; then
-            priority_pid=$!
+            output=$(OXYGEN_DEPLOYMENT_TOKEN=${{ steps.check_version.outputs.v1_token }} $oxygen_v1_command)
+            exit_code=$?
+
+            if [ $exit_code -eq 0 ]; then
+              echo "url=$output" >> $GITHUB_OUTPUT
+            else
+              exit $exit_code
+            fi
+          else
+            output=$(OXYGEN_DEPLOYMENT_TOKEN=${{ steps.check_version.outputs.v1_token }} $oxygen_v1_command)
           fi
         fi
-
         priority_exit_code=0
 
         for pid in ${pids[*]}; do
